--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URL='mongodb+srv://aadit:1234@blog-management-db.9g0czhk.mongodb.net/test_ruchit'
 #REACT_APP_IP='http://localhost:3001'
-REACT_APP_IP='https://blogmanagementappserver-production.up.railway.app/'
+REACT_APP_IP='https://blogmanagementappserver-production.up.railway.app'
 JWT_SECRET='somesuperhardstringtoguess'
